[Update] Fixing ScrollBar issue

--- a/src/app/pages/claims/claims-list/claims-list.component.scss
+++ b/src/app/pages/claims/claims-list/claims-list.component.scss
@@ -1,29 +1,48 @@
 [col-id="action"] {
-  overflow: visible !important;
+	overflow: visible !important;
 }
 
 .ag-row.ag-row-focus {
-  z-index: 1 !important;
+	z-index: 1 !important;
 }
 
 .ag-cell:focus {
-  border: none !important;
-  outline: none;
+	border: none !important;
+	outline: none;
 }
 
 .offcanvas-body {
-  .form-control {
-    max-height: 30px;
-  }
-  .form-control.text-area {
-    max-height: unset;
-  }
+	.form-control {
+		max-height: 30px;
+	}
+	.form-control.text-area {
+		max-height: unset;
+	}
 }
+
 .ng-select .ng-select-container {
-  min-height: 28px !important;
-  height: fit-content !important;
-  max-height: fit-content !important;
+	min-height: 28px !important;
+	height: fit-content !important;
+	max-height: fit-content !important;
 }
 .amount-op {
-  width: 100px !important;
+	width: 100px !important;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+	background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #aaa;
+	border-radius: 6px;
+	transition: background-color 0.2s linear, height 0.2s ease-in-out;
+	-webkit-transition: background-color 0.2s linear, height 0.2s ease-in-out;
 }
